--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Motor Finance Redress</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Motor Finance Redress</title>
 </head>
 <body>
-    <script src='https://areteans-i25-plf.pegatsdemo.com/prweb/PRRestService/c11nsvc/v1/pega-embed.js' ></script>
-    <pega-embed id='theEmbed' action='openAssignment' assignmentID='' themeID='pzAries' casePage='assignment' appAlias='finance-redress' pegaServerUrl='https://areteans-i25-plf.pegatsdemo.com/prweb/' autoReauth='true' authService='pega' userIdentifier='Joyce' password='cnVsZXM=' clientId='13718990074089488661' style='width:100%'>
-    </pega-embed>
+    <script src='https://areteans-i25-plf.pegatsdemo.com/prweb/PRRestService/c11nsvc/v1/pega-embed.js'></script>
+
+    <!-- Placeholder div for dynamically injecting pega-embed -->
+    <div id="embedContainer"></div>
+
     <script>
         const getCaseIdEndpoint = "https://areteans-i25-plf.pegatsdemo.com/prweb/api/DynamicAssignment/v1/getDynamicId";
+
         async function fetchCaseId() {
+            try {
                 const response = await fetch(getCaseIdEndpoint, {
                     method: "GET",
-                    header: {}
+                    headers: {
+                        "Content-Type": "application/json"
+                        // Add auth headers here if needed
+                    }
                 });
-                    const data = await response.json();
-                    const caseId = data.AssignmentID;
-                    let embedElement = document.getElementById('theEmbed');
-                    embedElement.setAttribute("assignmentID", caseId);
+
+                const data = await response.json();
+                const caseId = data.AssignmentID;
+
+                // Inject new pega-embed element
+                document.getElementById("embedContainer").innerHTML = `
+                    <pega-embed 
+                        action='openAssignment' 
+                        assignmentID='${caseId}' 
+                        themeID='pzAries' 
+                        casePage='assignment' 
+                        appAlias='finance-redress' 
+                        pegaServerUrl='https://areteans-i25-plf.pegatsdemo.com/prweb/' 
+                        autoReauth='true' 
+                        authService='pega' 
+                        userIdentifier='Joyce' 
+                        password='cnVsZXM=' 
+                        clientId='13718990074089488661' 
+                        style='width:100%'>
+                    </pega-embed>
+                `;
+            } catch (error) {
+                console.error("Failed to fetch case ID:", error);
+            }
         }
+
         fetchCaseId();
-</script>
+    </script>
 </body>
 </html>
