--- a/index.html
+++ b/index.html
@@ -1,58 +1,26 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Motor Finance Redress</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Motor Finance Redress</title>
 </head>
 <body>
-    <script src="https://areteans-i25-plf.pegatsdemo.com/prweb/PRRestService/c11nsvc/v1/pega-embed.js"></script>
-
-    <!-- We will inject the embed component here dynamically -->
-    <div id="embedContainer"></div>
-
+    <script src='https://areteans-i25-plf.pegatsdemo.com/prweb/PRRestService/c11nsvc/v1/pega-embed.js' ></script>
+    <pega-embed id='theEmbed' action='openAssignment' assignmentID='' themeID='pzAries' casePage='assignment' appAlias='finance-redress' pegaServerUrl='https://areteans-i25-plf.pegatsdemo.com/prweb/' autoReauth='true' authService='pega' userIdentifier='Joyce' password='cnVsZXM=' clientId='13718990074089488661' style='width:100%'>
+    </pega-embed>
     <script>
         const getCaseIdEndpoint = "https://areteans-i25-plf.pegatsdemo.com/prweb/api/DynamicAssignment/v1/getDynamicId";
-
         async function fetchCaseId() {
-            try {
                 const response = await fetch(getCaseIdEndpoint, {
                     method: "GET",
-                    headers: {
-                        "Content-Type": "application/json"
-                    }
+                    header: {}
                 });
-
-                if (!response.ok) {
-                    throw new Error("Failed to fetch AssignmentID");
-                }
-
-                const data = await response.json();
-                const caseId = data.AssignmentID;
-
-                // Inject only AFTER the ID is fetched
-                document.getElementById("embedContainer").innerHTML = `
-                    <pega-embed 
-                        id="theEmbed"
-                        action="openAssignment"
-                        assignmentID="${caseId}"
-                        themeID="pzAries"
-                        casePage="assignment"
-                        appAlias="finance-redress"
-                        pegaServerUrl="https://areteans-i25-plf.pegatsdemo.com/prweb/"
-                        autoReauth="true"
-                        authService="pega"
-                        userIdentifier="Joyce"
-                        password="cnVsZXM="
-                        clientId="13718990074089488661"
-                        style="width:100%">
-                    </pega-embed>
-                `;
-            } catch (error) {
-                console.error("Error fetching Assignment ID:", error);
-            }
+                    const data = await response.json();
+                    const caseId = data.AssignmentID;
+                    let embedElement = document.getElementById('theEmbed');
+                    embedElement.setAttribute("assignmentID", caseId);
         }
-
-        window.onload = fetchCaseId;
-    </script>
+        fetchCaseId();
+</script>
 </body>
 </html>
